inc/admin.css
/* ... */
.mpcf-panels-menu li:not(.active):hover .mpcf-panel-title {
	color: var(--mpcfDeepCerulean);
}

.mpcf-panel-icon {
	position: relative;
	width: 20px;
	height: 20px;
	margin-right: 8px;
}

.mpcf-panel-icon-svg {
	background-size: contain;
	background-repeat: no-repeat;
}

.mpcf-panels-menu li.active .mpcf-panel-icon {
	color: var(--mpcfDeepCerulean);
}

.mpcf-panels-menu li.active .mpcf-panel-icon-svg {
	margin-left: -1px;
}

.mpcf-panels-menu li.active:before,
.mpcf-panels-menu li.active:after,
.mpcf-panels-menu li.active .mpcf-panel-icon:after {
	content: '';
}

.mpcf-panels-menu li.active:before,
.mpcf-panels-menu li.active:after,
.mpcf-panels-menu li.active .mpcf-panel-icon:before,
.mpcf-panels-menu li.active .mpcf-panel-icon:after {
	position: absolute;
	bottom: -10px;
	right: -1px;
	z-index: 1;

	display: block;
	width: 10px;
	height: 10px;
	background-color: var(--mpcfWhite);
	border-right: 1px solid var(--mpcfWhite);
}

.mpcf-panels-menu li.active:not(:last-child):after {
	bottom: -11px;
	background-color: var(--mpcfWildSand);
	border-top: 1px solid var(--mpcfAlto);
	border-right: 1px solid var(--mpcfAlto);
	border-top-right-radius: 10px;
}

.mpcf-panels-menu li.active:last-child:before,
.mpcf-panels-menu li.active:last-child:after {
	display: none;
}

.mpcf-panels-menu li.active .mpcf-panel-icon:before,
.mpcf-panels-menu li.active .mpcf-panel-icon:after {
	bottom: -13px;
	left: -13px;
	right: initial;
	background-color: var(--mpcfWildSand);
}

.mpcf-panels-menu li.active .mpcf-panel-icon:before {
	z-index: 2;
	padding: 0 0 22px 11px;
	background-color: var(--mpcfWhite);
	border-bottom-left-radius: 10px;
	border-bottom: 1px solid var(--mpcfAlto);
	border-left: 1px solid var(--mpcfAlto);
}

.mpcf-options .mpcf-panels-menu li.active .mpcf-panel-icon:before {
	padding-bottom: 22px;
}

.mpcf-panels-menu li.active .mpcf-panel-icon-svg:before {
	content: '';
	padding: 0;
	left: -12px;
}

.mpcf-panel-icon img {
	width: 100%;
	height: 100%;
	object-fit: contain;
	object-position: center center;
}

.mpcf-panel-title:first-child {
	margin-left: 28px;
}

.mpcf-panels-tabs {
	width: calc(100% - 40px);
	max-width: 1000px;
	margin: 35px 20px 20px 20px;
}

.mpcf-options .mpcf-panels-tabs {
	padding-right: 45px;
}

.mpcf-panel {
	display: none;
}

.mpcf-panel.active-panel {
	display: block;
}

@media (min-width: 1130px) {
	.mpcf-panels-menu li:not(:empty) {
		padding-right: 0;
	}
}

@media (min-width: 1350px) {
	.mpcf-panel.active-panel,
	.mpcf-repeater-row,
	.mpcf-conditional-wrapper {
		display: grid;
		grid-template-columns: auto minmax(0, 1fr);
		row-gap: 20px;
	}
}








/******************************
	Modularised meta boxes
 ******************************/

.mpcf-modules {
	--controlsHeight: 54px;
	position: relative;
}

.mpcf-modules-controls {
	position: sticky;
	bottom: 0px;
	left: 0;
	padding-bottom: 12px;
}

.mpcf-modules-controls:after {
	content: '';
	position: absolute;
	bottom: 0;
	left: 0;
	z-index: 1;

	display: block;
	width: 100%;
	height: 20px;
	background-color: var(--mpcfWhite);
}

.mpcf-modules-controls-inner {
	position: relative;
	z-index: 2;
	display: flex;
	align-items: center;
	gap: 8px;
	width: calc(100% - 52px);
	padding: 12px 12px 12px 40px;
	border-radius: 6px;
	overflow: hidden;
	background-color: var(--mpcfLochmara);
	color: var(--mpcfWhite);
}

.mpcf-modules-controls .mpcf-button {
	color: var(--mpcfWhite);
}

.mpcf-modules-controls .mpcf-button:hover,
.mpcf-modules-controls .mpcf-button:focus {
	color: var(--mpcfAlto);
}



.mpcf-modules-inner {
	display: flex;
	flex-direction: column;
	gap: 10px;
}

.mpcf-module {
	border-radius: 6px;
	overflow: hidden;
}

.mpcf-module:last-child {
	margin-bottom: var(--controlsHeight);
}

.mpcf-module-header {
	display: flex;
	align-items: center;
	justify-content: space-between;
	padding: 8px 12px;
	border-radius: 6px;
	background-color: var(--mpcfWildSand);
	cursor: pointer;
	transition: border-radius 0.25s ease;
}

.mpcf-module.active .mpcf-module-header {
	border-radius: 0;
}

.mpcf-module-info {
	display: flex;
	align-items: center;
	gap: 8px;
}

.mpcf-module-icon {
	position: relative;
	width: 20px;
	height: 20px;
	color: var(--mpcfDoveGray);
}

.mpcf-module.active .mpcf-module-icon {
	color: var(--mpcfDeepCerulean);
}

.mpcf-module-icon-svg {
	background-size: contain;
	background-repeat: no-repeat;
}

.mpcf-panel-icon img {
	width: 100%;
	height: 100%;
	object-fit: contain;
	object-position: center center;
}

.mpcf-module .mpcf-module-title {
	color: var(--mpcfDoveGray);
	user-select: none;
	transition: color 0.25s ease;
}

.mpcf-module.active .mpcf-module-title {
	color: var(--mpcfBlack);
	font-weight: bold;
}

.mpcf-module-controls button {
	appearance: none;

	position: relative;

	width: 26px;
	height: 26px;
	border: none;

	font: normal 20px / 1 dashicons;
	color: var(--mpcfGray);
	background-color: transparent;
	cursor: pointer;
}

.mpcf-module:first-child .mpcf-module-controls .mpcf-btn-move-module-up,
.mpcf-module:last-child .mpcf-module-controls .mpcf-btn-move-module-down {
	color: var(--mpcfSilver);
	cursor: not-allowed;
}

.mpcf-module-controls button:focus {
	box-shadow: inset 0 0 0 2px var(--mpcfMatisse);
	border-radius: 50%;
	outline: 2px solid transparent;
}

.mpcf-module-controls button:before {
	position: absolute;
	top: 50%;
	left: 50%;
	width: 20px;
	transform: translate(-50%, -50%);
}

.mpcf-module-controls .mpcf-btn-remove-module:before {
	content: "\f182";
	color: inherit;
}

.mpcf-module-controls .mpcf-btn-move-module-up:before {
	content: "\f343";
	color: inherit;
}

.mpcf-module-controls .mpcf-btn-move-module-down:before {
	content: "\f347";
	color: inherit;
}

.mpcf-module-controls .mpcf-btn-show-module:before {
	content: "\f140";
	color: inherit;
}

.mpcf-module.active .mpcf-module-controls .mpcf-btn-show-module:before {
	content: "\f142";
	color: inherit;
}
/* ... */

